--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
-    "@prisma/client": "^2.16.1",
+    "@prisma/client": "^2.17.0",
+    "@quixo3/prisma-session-store": "^3.0.1",
     "crypto-js": "^4.0.0",
+    "express-session": "^1.17.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -34,11 +36,12 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
-    "@types/crypto-js": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
@@ -46,7 +49,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "prisma": "^2.16.1",
+    "prisma": "^2.17.0",
     "start-server-nestjs-webpack-plugin": "^2.2.5",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
