--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@prisma/client": "^2.17.0",
     "@quixo3/prisma-session-store": "^3.0.1",
     "crypto-js": "^4.0.0",
+    "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
