--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@prisma/client": "^2.17.0",
     "@quixo3/prisma-session-store": "^3.0.1",
@@ -30,6 +31,8 @@
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -43,6 +46,7 @@
     "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
