--- a/package.json
+++ b/package.json
@@ -60,14 +60,15 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "prisma": "^2.17.0",
-    "start-server-nestjs-webpack-plugin": "^2.2.5",
+    "prisma": "^2.18.0",
+    "run-script-webpack-plugin": "0.0.10",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5",
+    "webpack": "^5.24.4",
     "webpack-node-externals": "^2.5.2"
   },
   "jest": {
