--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.15",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
